--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@legendapp/motion": "latest",
     "@react-navigation/native": "^6.0.2",
     "@testing-library/react": "^14.0.0",
+    "axios": "^1.6.8",
     "expo": "~49.0.8",
     "expo-font": "~11.4.0",
     "expo-image": "~1.3.2",
@@ -47,7 +48,8 @@
     "react-native-web": "~0.19.6",
     "react-router-dom": "^6.16.0",
     "styled-components": "^6.0.8",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "expo-document-picker": "~11.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
